# src/shs.Api/Presentation/Endpoints/Consignment/Models/UpdateConsignmentItemRequest.cs
@@ -1,0 +1,10 @@
+namespace shs.Api.Presentation.Endpoints.Consignment.Models;
+
+public record UpdateConsignmentItemRequest(
+    string Name,
+    string? Description,
+    decimal Price,
+    string Size,
+    long BrandId,
+    string? Color,
+    IReadOnlyCollection<long> TagIds);
